fixed: form header logo too small in Edge, https://github.com/kobotoolbox/enketo-express/issues/402

--- a/app/views/styles/component/_form_header.scss
+++ b/app/views/styles/component/_form_header.scss
@@ -21,6 +21,7 @@ $offline-color: #d15200;
             vertical-align: middle;
         }
         img {
+            height: 100%;
             max-height: 30px;
             max-width: 130px;
             vertical-align: middle;
